parser pratically done, misses args

--- a/breeze.conf
+++ b/breeze.conf
@@ -1,17 +1,9 @@
-spawn 
+reload {
+	key = r
+	modifier = win 
+}
 
-{
-
-
-
-
-
-
-
-
-
-
-
-
-
+quit {
+	key = q
+	modifier = ctrl + shift + win
 }
