very epic update

--- a/breeze.conf
+++ b/breeze.conf
@@ -7,3 +7,27 @@ quit {
 	key = q
 	modifier = ctrl + shift + win
 }
+
+spawn {
+	key = e
+	modifier = win
+	arg = 'explorer.exe file:'
+}
+
+spawn {
+	key = enter
+	modifier = ctrl 
+	arg = 'D:\Programas\terminal\WindowsTerminal.exe'
+}
+
+spawn {
+	key = s
+	modifier = win + shift
+	arg = 'C:\msys64\home\miguel\coding\breeze\tools\quickshot\quickshot.exe'
+}
+
+spawn {
+	key = a
+	modifier = win
+	arg = 'explorer.exe C:\ProgramData\Microsoft\Windows\Start Menu\Program'
+}
