update my config

--- a/breeze.conf
+++ b/breeze.conf
@@ -28,6 +28,12 @@ spawn {
 
 spawn {
 	key = a
+	modifier = win + shift
+	arg = 'explorer.exe "C:\ProgramData\Microsoft\Windows\Start Menu\Programs"'
+}
+
+spawn {
+	key = a
 	modifier = win
-	arg = 'explorer.exe C:\ProgramData\Microsoft\Windows\Start Menu\Program'
+	arg = 'explorer.exe "C:\Users\miguel\AppData\Roaming\Microsoft\Windows\Start Menu\Programs"'
 }
