remove my own lib dependency

--- a/breeze.conf
+++ b/breeze.conf
@@ -28,7 +28,7 @@ spawn {
 spawn {
 	key = s
 	modifier = win + shift
-	arg = 'C:\msys64\home\miguel\coding\breeze\tools\quickshot\quickshot.exe'
+	arg = 'C:\Users\miguel\coding\breeze\tools\quickshot'
 }
 
 spawn {
