--- a/breeze.conf
+++ b/breeze.conf
@@ -28,7 +28,7 @@ spawn {
 spawn {
 	key = s
 	modifier = win + shift
-	arg = 'C:\Users\miguel\coding\breeze\tools\quickshot'
+	arg = 'C:\Users\miguel\coding\breeze\tools\quickshot\quickshot.exe'
 }
 
 spawn {
