implement virtual desktops and extend default config

--- a/breeze.conf
+++ b/breeze.conf
@@ -22,7 +22,7 @@ spawn {
 spawn {
 	key = enter
 	modifier = ctrl 
-	arg = 'D:\Programas\terminal\WindowsTerminal.exe'
+	arg = 'alacritty.exe'
 }
 
 spawn {
