--- a/breeze.conf
+++ b/breeze.conf
@@ -42,3 +42,8 @@ spawn {
 	modifier = win
 	arg = 'explorer.exe "C:\Users\miguel\AppData\Roaming\Microsoft\Windows\Start Menu\Programs"'
 }
+
+desktops {
+	send_to_desktop_modifier = shift + win
+	switch_to_desktop_modifier = win
+}
