--- a/breeze.conf
+++ b/breeze.conf
@@ -43,6 +43,21 @@ spawn {
 	arg = 'explorer.exe "C:\Users\miguel\AppData\Roaming\Microsoft\Windows\Start Menu\Programs"'
 }
 
+reveal_all {
+	key = r
+	modifier = ctrl + win + alt
+}
+
+focus_next {
+	key = j
+	modifier = win
+}
+
+focus_prev {
+	key = k
+	modifier = win
+}
+
 desktops {
 	send_to_desktop_modifier = shift + win
 	switch_to_desktop_modifier = win
