allow costumizing bar colors

--- a/breeze.conf
+++ b/breeze.conf
@@ -62,3 +62,8 @@ desktops {
 	send_to_desktop_modifier = shift + win
 	switch_to_desktop_modifier = win
 }
+
+bar {
+	background = #282828
+	foreground = #d4be98
+}
