--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Install Clang
-      uses: egor-tensin/setup-clang@v1.4
+    - name: Enable Developer Command Prompt
+      uses: ilammy/msvc-dev-cmd@v1.13.0
     - name: Build Debug
       shell: cmd
       run: build.bat
