--- a/.github/workflows/release-tools.yml
+++ b/.github/workflows/release-tools.yml
@@ -18,17 +18,19 @@ jobs:
       uses: ilammy/msvc-dev-cmd@v1.13.0
     - name: Build all tools
       shell: pwsh
+      env:
+        tag: ${{ github.ref_name }}
       run: |
           echo "--- preparing folders ---"
           cd tools
           mkdir out
           echo "--- starting compilation ---"
           gci build.bat -r | % { pushd $_.DirectoryName; & $_.FullName; popd }
-          gci *.exe -r | mi -dest (join-path $pwd out)
+          gci *.exe -r | % {mi -path $_.FullName -d "$($_.BaseName)_v$($env:tag).exe"}
           echo "--- finished compilation ---"
           ls out/
     - name: Upload built tools to release
       uses: svenstaro/upload-release-action@2.9.0
       with:
-        file: tools/out/*.exe
+        file: tools/*.exe
         file_glob: true
