--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build
       shell: cmd
       run: ${{ matrix.script }}
-    - name: Select Time Zone
+    - name: Set Time Zone
       uses: szenius/set-timezone@v2.0
     - name: Prepare Artifact Name
       shell: pwsh
