add keyboard switching tool

--- a/breeze.conf
+++ b/breeze.conf
@@ -43,6 +43,12 @@ spawn {
 	arg = 'explorer.exe "C:\Users\miguel\AppData\Roaming\Microsoft\Windows\Start Menu\Programs"'
 }
 
+spawn {
+	key = l
+	modifier = win + shift
+	arg = 'kbswtch.exe'
+}
+
 reveal_all {
 	key = r
 	modifier = ctrl + win + alt
