--- a/breeze.conf
+++ b/breeze.conf
@@ -43,7 +43,7 @@ spawn {
 	arg = 'explorer.exe "C:\Users\miguel\AppData\Roaming\Microsoft\Windows\Start Menu\Programs"'
 }
 
-spawn {
+command_line {
 	key = l
 	modifier = win + shift
 	arg = 'kbswtch.exe'
