update README ToDos

--- a/breeze.conf
+++ b/breeze.conf
@@ -49,6 +49,18 @@ command_line {
 	arg = 'kbswtch.exe'
 }
 
+spawn {
+	key = m 
+	modifier = win
+	arg = 'smenu.exe'
+}
+
+spawn {
+	key = k
+	modifier = win + shift
+	arg = 'bash.exe tools/smenu/demo_scripts/powermenu.sh'
+}
+
 reveal_all {
 	key = r
 	modifier = ctrl + win + alt
